GH #3009: Fix contrast reation in Create boxes, set background-color in the theme files

--- a/sourcecode/hub/resources/css/theme-dark.scss
+++ b/sourcecode/hub/resources/css/theme-dark.scss
@@ -14,4 +14,10 @@
     .btn-outline-secondary {
         @include button-outline-variant($gray-500, $gray-900, $gray-200, $gray-100, $gray-900);
     }
+
+    .lti-tool-image {
+        &.empty {
+            background-color: #075035;
+        }
+    }
 }
